# m1-media-programming-main

./: .editorconfig  README.md
.gitea/workflows/: ci.yml  demo.yml
.github/workflows/: ci.yml
0-python/: README.md  __main__.py  file.txt
1-flask/: README.md  __main__.py
1-flask/data/templates/: login.html
1-flask/src/: __main__.py
1-flask/templates/: index.html
1-python/: main.py
2-ml/: .editorconfig  README.md  pyproject.toml  requirements.txt  training.ipynb  visual.ipynb
2-ml/data/ml/: encoded_feature_names.pkl  model.pkl  pass_classifier.pkl  pass_pipeline.pkl  score_pipeline.pkl  score_regressor.pkl
2-ml/data/templates/: index.html
2-ml/src/: __main__.py  const.py  cost.py  train_model.py
3-docker/: .dockerignore  .editorconfig  Dockerfile  README.md  app.py  compose.yml  pyproject.toml  requirements.txt
