[project]
name = "2-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.1.2",
    "joblib>=1.5.2",
    "numpy>=2.0.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.31.0",
    "kagglehub>=0.3.13",
    "pandas>=2.3.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
